--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Dashboard</title>
@@ -8,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
 
   <div class="container-fluid">
@@ -26,19 +28,28 @@
 
       <!-- Main Content -->
       <main class="col-md-9 col-lg-10 ms-sm-auto px-4">
-        <div class="header">
+        <div class="header position-relative">
           <i class="fas fa-user-circle fa-lg"></i>
-          <span>User123</span>
-          <i class="fas fa-chevron-down"></i>
+          <span class="username-placeholder">User</span>
+          <i class="fas dropdown-toggle" id="userDropdown" data-bs-toggle="dropdown"
+            aria-expanded="false" style="cursor: pointer;"></i>
+
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+            <li><a class="dropdown-item" href="#">Logout</a></li>
+          </ul>
         </div>
 
-        <div class="welcome">Hello User123!</div>
+        <div class="welcome">Hello <span class="username-placeholder">User</span>!</div>
         <div class="subtitle">Welcome Back</div>
       </main>
     </div>
   </div>
 
+
   <!-- Bootstrap JS Bundle -->
+
+  <script src="js/script2.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
