--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,8 @@
                     <div class="col-md-6">
                         <h3 class="fw-bold">We Value Your Feedback</h3>
                         <p>Let us know about your experience with Al Zahid Madni Travels.</p>
+                        <!-- Feedback message -->
+                        <div id="feedbackAlert"></div>
                         <form id="feedbackForm">
                             <div class="mb-3">
                                 <label for="name" class="form-label fw-bold">Your Name</label>
