--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,7 +16,7 @@
     <div class="row">
       <!-- Sidebar -->
       <nav class="col-md-3 col-lg-2 d-md-block sidebar p-0">
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-column" style="margin-top: 50px; margin-left: 20px;">
           <a href="#"><i class="fas fa-chart-line"></i> DashBoard</a>
           <a href="#"><i class="fas fa-calendar-check"></i> My Bookings</a>
           <a href="#"><i class="fas fa-file-invoice-dollar"></i> Account Ledger</a>
@@ -31,8 +31,8 @@
         <div class="header position-relative">
           <i class="fas fa-user-circle fa-lg"></i>
           <span class="username-placeholder">User</span>
-          <i class="fas dropdown-toggle" id="userDropdown" data-bs-toggle="dropdown"
-            aria-expanded="false" style="cursor: pointer;"></i>
+          <i class="fas dropdown-toggle" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false"
+            style="cursor: pointer;"></i>
 
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
             <li><a class="dropdown-item" href="#">Logout</a></li>
@@ -45,8 +45,6 @@
     </div>
   </div>
 
-
-  <!-- Bootstrap JS Bundle -->
 
   <script src="js/script2.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
