--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -59,10 +59,20 @@
 
           <!-- My Bookings Section -->
           <div id="bookings-page" class="page-section">
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white mb-4">
               <div class="card-body">
                 <h3 class="card-title">My Bookings</h3>
-                <p class="card-text">This is My Bookings page. Here you can view and manage all your travel bookings.</p>
+                <p class="card-text">View and manage all your travel bookings here.</p>
+              </div>
+            </div>
+            
+            <!-- Bookings List -->
+            <div class="row" id="bookings-container">
+              <div class="col-12 text-center text-white">
+                <div class="spinner-border" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p>Loading your bookings...</p>
               </div>
             </div>
           </div>
@@ -110,10 +120,20 @@
 
           <!-- Airline Section -->
           <div id="airline-page" class="page-section">
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white mb-4">
               <div class="card-body">
-                <h3 class="card-title">Airline</h3>
-                <p class="card-text">This is Airline page. Browse and book flights from various airlines.</p>
+                <h3 class="card-title">Available Flights</h3>
+                <p class="card-text">Browse and book flights from various airlines.</p>
+              </div>
+            </div>
+            
+            <!-- Tickets List -->
+            <div class="row" id="tickets-container">
+              <div class="col-12 text-center text-white">
+                <div class="spinner-border" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+                <p>Loading available flights...</p>
               </div>
             </div>
           </div>
@@ -181,6 +201,43 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-primary" id="submitPayment">Submit Payment</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Booking Modal -->
+  <div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content bg-dark text-white">
+        <div class="modal-header">
+          <h5 class="modal-title" id="bookingModalLabel">Confirm Booking</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div id="ticketDetails" class="mb-4">
+            <!-- Ticket details will be loaded here -->
+          </div>
+          <form id="bookingForm">
+            <input type="hidden" id="ticketId">
+            <div class="mb-3">
+              <label for="passengerName" class="form-label">Passenger Name</label>
+              <input type="text" class="form-control bg-dark text-white" id="passengerName" required>
+            </div>
+            <div class="mb-3">
+              <label for="passengerEmail" class="form-label">Email</label>
+              <input type="email" class="form-control bg-dark text-white" id="passengerEmail" required>
+            </div>
+            <div class="mb-3">
+              <label for="passengerPhone" class="form-label">Phone Number</label>
+              <input type="tel" class="form-control bg-dark text-white" id="passengerPhone" required>
+            </div>
+            <div id="bookingMessage" class="alert d-none"></div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" id="confirmBooking">Confirm Booking</button>
         </div>
       </div>
     </div>
