little cleanup and finalized

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/script.js"></script>
     <link rel="icon" href="images/logo.png" type="image/png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -37,9 +38,9 @@
     <!-- Main Content -->
     <main id="home" class="container-fluid mt-5">
         <div class="container-fluid mt-5"><br><br>
-            <div class="row align-items-center">
+            <div class="row align-items-center flex-column-reverse flex-md-row">
                 <!-- Login Form -->
-                <div class="col-md-6 d-flex align-items-center justify-content-center text-white">
+                <div class="col-md-6 d-flex align-items-center justify-content-center text-white mb-4 mb-md-0">
                     <div class="w-100" style="max-width: 350px;">
                         <h2 class="text-center fw-bold mb-4">Welcome Back!</h2>
                         <p class="text-center">Log in to manage your bookings and explore our travel services.</p>
@@ -70,7 +71,7 @@
 
 
                 <!-- Right Side -->
-                <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <div class="col-md-6 d-flex align-items-center justify-content-center mb-4 mb-md-0">
                     <img src="images/pic.png" alt="Travel Illustration" class="img-fluid" style="max-width: 80%;"
                         loading="lazy">
                 </div>
@@ -86,21 +87,21 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-12 mb-4">
                         <div class="service-card">
                             <i class="fas fa-plane fa-3x"></i>
                             <h3>Airline Ticketing</h3>
                             <p>Book affordable flights with top airlines worldwide.</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-12 mb-4">
                         <div class="service-card">
                             <i class="fas fa-mosque fa-3x"></i>
                             <h3>Hajj & Umrah Packages</h3>
                             <p>Exclusive packages with guided tours for a stress-free pilgrimage.</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-12 mb-4">
                         <div class="service-card">
                             <i class="fas fa-hotel fa-3x"></i>
                             <h3>Hotel Bookings</h3>
@@ -121,23 +122,23 @@
                     <h1 class="section-title-bg">ABOUT US</h1>
                 </div>
 
-                <div class="row align-items-center">
-                    <div class="col-md-6">
+                <div class="row align-items-center flex-column-reverse flex-md-row-reverse">
+                    <div class="col-md-6 text-md-start text-center mb-4 mb-md-0">
                         <h3 class="fw-bold">Who We Are</h3>
                         <p>
                             Al Zahid Madni Travels has been providing exceptional travel services since 2006.
-                            Specializing in **Hajj, Umrah, and airline ticketing**, we ensure a smooth and hassle-free
+                            Specializing in <strong>Hajj, Umrah, and airline ticketing</strong>, we ensure a smooth and hassle-free
                             experience for our customers.
                         </p>
                         <h3 class="fw-bold mt-4">Our Mission</h3>
                         <p>
-                            Our mission is to offer **affordable and comfortable travel solutions** for pilgrims and
+                            Our mission is to offer <strong>affordable and comfortable travel solutions</strong> for pilgrims and
                             travelers worldwide.
                             With years of experience, we strive to make your journey as seamless as possible.
                         </p>
                     </div>
 
-                    <div class="col-md-6 d-flex align-items-center justify-content-center">
+                    <div class="col-md-6 d-flex align-items-center justify-content-center mb-4 mb-md-0">
                         <img src="images/about-us.png" alt="About Al Zahid Madni Travels" class="img-fluid rounded"
                             style="max-width: 80%;" loading="lazy">
                     </div>
@@ -155,7 +156,7 @@
                 </div>
 
                 <div class="row justify-content-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-12">
                         <h3 class="fw-bold">We Value Your Feedback</h3>
                         <p>Let us know about your experience with Al Zahid Madni Travels.</p>
                         <!-- Feedback message -->
