--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,15 +17,26 @@
     <div class="row">
       <!-- Sidebar -->
       <nav class="col-md-3 col-lg-2 d-md-block sidebar p-0">
-        <div class="d-flex flex-column" style="margin-top: 50px; margin-left: 20px;">
-          <a href="#" data-page="dashboard"><i class="fas fa-chart-line"></i> DashBoard</a>
-          <a href="#" data-page="bookings"><i class="fas fa-calendar-check"></i> My Bookings</a>
-          <a href="#" data-page="ledger"><i class="fas fa-file-invoice-dollar"></i> Account Ledger</a>
-          <a href="#" data-page="airline"><i class="fas fa-plane-departure"></i> Airline Tickets</a>
-          <!-- <a href="#" data-page="hajj"><i class="fas fa-kaaba"></i> Hajj 2025</a>
-          <a href="#" data-page="umrah"><i class="fas fa-mosque"></i> Umrah</a> -->
-        </div>
-      </nav>
+  <!-- Mobile Toggle Button -->
+  <div class="d-flex justify-content-between align-items-center d-md-none p-3 bg-dark">
+    <span class="text-white fs-5">Menu</span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fas fa-bars text-white"></i>
+    </button>
+  </div>
+  
+  <!-- Collapsible Sidebar Content -->
+  <div class="collapse d-md-block" id="sidebarMenu">
+    <div class="d-flex flex-column" style="margin-top: 20px; margin-left: 20px;">
+      <a href="#" data-page="dashboard"><i class="fas fa-chart-line"></i> DashBoard</a>
+      <a href="#" data-page="bookings"><i class="fas fa-calendar-check"></i> My Bookings</a>
+      <a href="#" data-page="ledger"><i class="fas fa-file-invoice-dollar"></i> Account Ledger</a>
+      <a href="#" data-page="airline"><i class="fas fa-plane-departure"></i> Airline Tickets</a>
+      <!-- <a href="#" data-page="hajj"><i class="fas fa-kaaba"></i> Hajj 2025</a>
+      <a href="#" data-page="umrah"><i class="fas fa-mosque"></i> Umrah</a> -->
+    </div>
+  </div>
+</nav>
 
       <!-- Main Content -->
       <main class="col-md-9 col-lg-10 ms-sm-auto px-4">
