--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -28,7 +28,13 @@
   <!-- Collapsible Sidebar Content -->
   <div class="collapse d-md-block" id="sidebarMenu">
     <div class="d-flex flex-column" style="margin-top: 20px; margin-left: 20px;">
-      <a href="#" data-page="dashboard"><i class="fas fa-chart-line"></i> DashBoard</a>
+      <a href="#" data-page="dashboard" class="position-relative">
+        <i class="fas fa-chart-line"></i> DashBoard
+        <span id="notification-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">
+          0
+          <span class="visually-hidden">unread notifications</span>
+        </span>
+      </a>
       <a href="#" data-page="bookings"><i class="fas fa-calendar-check"></i> My Bookings</a>
       <a href="#" data-page="ledger"><i class="fas fa-file-invoice-dollar"></i> Account Ledger</a>
       <a href="#" data-page="airline"><i class="fas fa-plane-departure"></i> Airline Tickets</a>
@@ -63,6 +69,32 @@
                     <div class="dashboard-info">
                       Monitor system activities, oversee booking workflows, and manage ticket issuance efficiently
                       through the dashboard interface.
+                    </div>
+                    <div class="notifications-container mt-4">
+                      <div class="d-flex justify-content-between align-items-center ms-3 me-3 mb-2">
+                        <h5 class="text-white mb-0"><i class="fas fa-bell me-2"></i>Notifications</h5>
+                        <div class="notification-controls">
+                          <div class="btn-group btn-group-sm" role="group" aria-label="Notification filters">
+                            <button type="button" class="btn btn-outline-light active" data-filter="all">All</button>
+                            <button type="button" class="btn btn-outline-light" data-filter="completed">Completed</button>
+                            <button type="button" class="btn btn-outline-light" data-filter="failed">Failed</button>
+                          </div>
+                          <button id="mark-all-read" class="btn btn-sm btn-outline-light ms-2">
+                            <i class="fas fa-check-double"></i> Mark all read
+                          </button>
+                          <button id="clear-all-notifications" class="btn btn-sm btn-outline-danger ms-2">
+                            <i class="fas fa-trash"></i> Clear all
+                          </button>
+                        </div>
+                      </div>
+                      <div id="notifications-area" class="p-3">
+                        <div class="text-center text-muted">
+                          <div class="spinner-border spinner-border-sm" role="status">
+                            <span class="visually-hidden">Loading notifications...</span>
+                          </div>
+                          <p>Loading notifications...</p>
+                        </div>
+                      </div>
                     </div>
 
                   </div>
@@ -259,6 +291,11 @@
       </div>
     </div>
   </div>
+
+  <!-- Notification Sound -->
+  <audio id="notification-sound" preload="auto">
+    <source src="sounds/notification.mp3" type="audio/mpeg">
+  </audio>
 
   <!-- Make sure jQuery is loaded before Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
