--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,7 +6,7 @@
   <title>Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/styles2.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/bootstrap/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link rel="icon" href="images/logo.png" type="image/png">
 </head>
@@ -19,7 +19,6 @@
       <nav class="col-md-3 col-lg-2 d-md-block sidebar p-0">
   <!-- Mobile Toggle Button -->
   <div class="d-flex justify-content-between align-items-center d-md-none p-3 bg-dark">
-    <span class="text-white fs-5">Menu</span>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars text-white"></i>
     </button>
@@ -79,9 +78,6 @@
                             <button type="button" class="btn btn-outline-light" data-filter="completed">Completed</button>
                             <button type="button" class="btn btn-outline-light" data-filter="failed">Failed</button>
                           </div>
-                          <button id="mark-all-read" class="btn btn-sm btn-outline-light ms-2">
-                            <i class="fas fa-check-double"></i> Mark all read
-                          </button>
                           <button id="clear-all-notifications" class="btn btn-sm btn-outline-danger ms-2">
                             <i class="fas fa-trash"></i> Clear all
                           </button>
