removed fazool ki chizen

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -223,7 +223,7 @@
             <div class="mb-3">
               <label for="paymentAmount" class="form-label">Amount</label>
               <div class="input-group">
-                <span class="input-group-text bg-dark text-white">$</span>
+                <span class="input-group-text bg-dark text-white">PKR</span>
                 <input type="number" class="form-control bg-dark text-white" id="paymentAmount" min="1" step="0.01"
                   required>
               </div>
